--- a/public/src/components/order_container/OrderContainer.scss
+++ b/public/src/components/order_container/OrderContainer.scss
@@ -9,7 +9,6 @@
     & > .header {
         width: 100%;
         height: 48px;
-        margin-bottom: 16px;
 
         display: grid;
         grid-template-columns: 1fr .5fr 1fr 1fr .5fr;
@@ -19,7 +18,7 @@
         color: #FAFAFA;
 
         & > div {
-            padding-left: 8px;
+            padding-left: 16px;
             line-height: 48px;
         }
     }
@@ -27,5 +26,9 @@
     & > .content {
         display: flex;
         flex-direction: column;
+
+        border-width: 0 1px 1px 1px;
+        border-style: solid;
+        border-color: #E0E0E0;
     }
 }
