--- a/public/src/components/order_item/OrderItem.scss
+++ b/public/src/components/order_item/OrderItem.scss
@@ -1,12 +1,18 @@
 .OrderItem {
-    margin-bottom: 16px;
+    padding: 16px 0;
     display: grid;
     grid-template-columns: 1fr .5fr 1fr 1fr .5fr;
-    grid-template-rows: 48px;
+    cursor: pointer;
+    transition: background-color .2s;
 
     & > div {
-        padding-left: 8px;
-        line-height: 48px;
-        overflow: hidden;
+        padding-left: 16px;
+        line-height: 24px;
+        word-wrap: break-word;
+        word-break: break-all;
+    }
+
+    &:hover {
+        background-color: #FAFAFA;
     }
 }
