--- a/public/src/components/application/Application.scss
+++ b/public/src/components/application/Application.scss
@@ -3,4 +3,17 @@
     height: 100%;
     display: flex;
     overflow: hidden;
+
+    & > .workspace {
+        flex-basis: 100%;
+
+        & > .header {
+            width: 100%;
+            height: 48px;
+            padding-left: 16px;
+            line-height: 48px;
+            background-color: #009688;
+            color: #FAFAFA;
+        }
+    }
 }
