--- a/public/src/components/order_container/OrderContainer.scss
+++ b/public/src/components/order_container/OrderContainer.scss
@@ -9,13 +9,11 @@
     & > .header {
         width: 100%;
         height: 48px;
-
         display: grid;
         grid-template-columns: 1fr .5fr 1fr 1fr .5fr;
         grid-template-rows: 48px;
-
-        background-color: #16A085;
-        color: #FAFAFA;
+        color: #16A085;
+        border-bottom: 1px solid #E0E0E0;
 
         & > div {
             padding-left: 16px;
@@ -26,9 +24,5 @@
     & > .content {
         display: flex;
         flex-direction: column;
-
-        border-width: 0 1px 1px 1px;
-        border-style: solid;
-        border-color: #E0E0E0;
     }
 }
