Refactoring. Fix components and design

--- a/public/src/components/application/Application.scss
+++ b/public/src/components/application/Application.scss
@@ -14,6 +14,7 @@
             line-height: 48px;
             background-color: #009688;
             color: #FAFAFA;
+            user-select: none;
         }
     }
 }
