--- a/public/src/components/order_container/OrderContainer.scss
+++ b/public/src/components/order_container/OrderContainer.scss
@@ -12,8 +12,9 @@
         display: grid;
         grid-template-columns: 1fr .5fr 1fr 1fr .5fr;
         grid-template-rows: 48px;
-        color: #16A085;
+        color: #009688;
         border-bottom: 1px solid #E0E0E0;
+        user-select: none;
 
         & > div {
             padding-left: 16px;
@@ -24,5 +25,20 @@
     & > .content {
         display: flex;
         flex-direction: column;
+    }
+
+    &-refresh-animated {
+        animation-name: OrderContainer-refresh;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+    }
+}
+
+@keyframes OrderContainer-refresh {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
