--- a/public/src/components/order_viewer/OrderViewer.scss
+++ b/public/src/components/order_viewer/OrderViewer.scss
@@ -10,6 +10,7 @@
         padding-left: 16px;
         background-color: #4DB6AC;
         color: #FAFAFA;
+        user-select: none;
     }
 
     &-displayed {
