--- a/public/src/components/good_item/GoodItem.scss
+++ b/public/src/components/good_item/GoodItem.scss
@@ -2,15 +2,17 @@
     display: grid;
     grid-template-columns: 1fr .5fr .5fr;
     transition: background-color .2s;
+    color: #616161;
 
     & > div {
         padding: 16px 16px 16px 16px;
         line-height: 24px;
         word-wrap: break-word;
         word-break: break-all;
-    }
 
-    &:hover {
-        background-color: #FAFAFA;
+        &::selection {
+            background-color: #4DB6AC;
+            color: #FAFAFA;
+        }
     }
 }
